# kasirku-dexiejs-app

./: .env  .env.example  .gitignore  README.md  eslint.config.js  ide-arah-aplikasi-kedepannya.md  index.html  package.json  planing.md  playwright.config.ts  summarize.md  tailwind.config.js  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  user-role-permission-implementation-guide.md  user-role-permission-progress.md  vite.config.js  vite.config.ts
src-tauri/: .env.example  Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon-f.icns
src-tauri/linux/: postremove.sh
src-tauri/manual-migrations/: backfill_cooperative_loan_is_migration.sql
src-tauri/migrations/: 0001_init.sql  0002_projects.sql  0003_taxes.sql  0004_contacts_warehouses_products.sql  0005_stock_mutations.sql  0006_auth_activity.sql  0007_sales_documents.sql  0008_purchase_documents.sql  0009_finance_transactions.sql  0010_journal_general_ledger.sql  0011_currencies_and_document_fx.sql  0012_cooperative.sql  0013_cooperative_member_area.sql  0014_roles_permissions.sql  0015_auth_user_email.sql  0016_backfill_auth_user_email.sql  0017_cooperative_installment_collection.sql  0018_purchase_pending_cost.sql  0019_cooperative_flexible_loans.sql  0020_cooperative_member_officer.sql  0021_cooperative_loan_payment_collection_metadata.sql  0022_stock_opnames.sql  0023_contact_retail_membership.sql  0024_production_orders.sql  0025_cooperative_collection_schedule_snapshot.sql  0026_cooperative_payment_integrity.sql  0027_cooperative_payment_maker_checker.sql  0028_cooperative_iptw.sql  0029_cooperative_saving_interest.sql  (+35 more)
(+1063 files in other folders)
