[package]
name = "frayukti"
version = "1.0.6"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kasirku_erp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-share = "2.0.5"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
tauri-plugin-dialog = "2"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid", "json", "migrate", "macros"] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "time"] }
dotenvy = "0.15.7"
thiserror = "2.0.18"
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
uuid = { version = "1.23.2", features = ["serde", "v4"] }
quick-xml = "0.38.4"
reqwest = { version = "0.13.2", default-features = false, features = ["rustls"] }
sha2 = "0.10.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
serialport = { version = "4", default-features = false }
